--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -7032,7 +7032,7 @@ footer .footer-divider {
   clear: both; }
 
 .blog .blog-header {
-  color: gray;
+  color: #404041;
   font-family: "Copernicus-Medium";
   line-height: 21px;
   font-size: 14px;
