--- a/wwwroot/_themes/main/templates/blog_entry.html
+++ b/wwwroot/_themes/main/templates/blog_entry.html
@@ -8,7 +8,7 @@
 					<ul class="categories">
 						{{ if categories|not_empty }}
 						{{ categories }}
-						<li><a class="blog-header" href="{{ _site_root }}blog/categories/{{ title|lower }}">{{ value }}</a></li>
+						<li><a class="blog-header" href="{{ _site_root }}blog/categories/{{ value|lower }}">{{ value }}</a></li>
 						{{ /categories }}
 						{{ else }}
 						<div class="title-holder"></div>
