--- a/wwwroot/_themes/main/templates/taxonomies.html
+++ b/wwwroot/_themes/main/templates/taxonomies.html
@@ -8,7 +8,7 @@
 					{{ entries:listing folder="blog" limit="5" taxonomy="true" }}
 						<div class="entry">
 							<div class="preview-image-container">
-								<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
+								<a href="{{ url }}" class="preview-image" style="background-image: url(' {{ path src="{{ main_image }}" }} ');"><div class="mask"></div></a>
 							</div>
 							<div class="preview">
 								<a href="{{ url }}"><div class="blog-title">{{ title }}</div></a>
