--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -24,8 +24,14 @@
 	}
 	.truncated {
 		display: none;
+		img {
+			display: none;
+		}
 		@include breakpoint($small) {
 			display: block;
+			img {
+				display: none;
+			}
 		}
 	}
 	@include breakpoint($small) {
