--- a/wwwroot/_themes/main/templates/property.html
+++ b/wwwroot/_themes/main/templates/property.html
@@ -233,6 +233,7 @@
 							
 							<ul>
 
+							{{ if amenities }}
 								{{ amenities }}
 								{{ if value =="washerDryer" }}
 								<li>Washer / Dryer</li>
@@ -240,10 +241,12 @@
 								<li>{{ value|ucfirst }}</li>
 								{{ endif }}
 								{{ /amenities }}
-								
+							{{ endif }}	
+							{{ if key_features }}
 								{{ key_features }}
 								<li>{{ value }}</li>
 								{{ /key_features }}
+							{{ endif }}
 
 							</ul>
 						</div>
