--- a/wwwroot/_themes/main/templates/blog_entry.html
+++ b/wwwroot/_themes/main/templates/blog_entry.html
@@ -28,7 +28,7 @@
 						<ul>
 							{{ relate:author }}
 							<li><a class="author-list" href="{{ _site_root }}blog/authors/{{ title|lower }}">
-								<img class="author-image" src="{{ path src="{{ image }}"}}">
+								<img class="author-image" src="{{ transform width="60" src="{{ image }}"}}">
 								{{ title }}
 							</a></li>  
 							{{ /relate:author }}
