--- a/wwwroot/_themes/main/layouts/default.html
+++ b/wwwroot/_themes/main/layouts/default.html
@@ -18,9 +18,7 @@
   <meta property="og:postal-code" content="10022" />
   <meta property="og:country-name" content="USA" />
   <title>{{ title }} - {{ _site_name }}</title>
-  <!-- build:css -->
-  <link rel="stylesheet" href="{{ theme:css }}" />
-  <!-- endbuild -->
+  <link rel="stylesheet" href="{{ theme:css src="main.min.css" }}" />
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
 <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
@@ -55,9 +53,7 @@
 
     {{ theme:partial src="footer" }}
 
-  <!-- build:js -->
-  <script src="{{ theme:js }}"></script>
-  <!-- endbuild -->
+  <script src="{{ theme:js src="main.min.js" }}"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
