photo quality test

--- a/wwwroot/_themes/main/templates/property.html
+++ b/wwwroot/_themes/main/templates/property.html
@@ -132,7 +132,7 @@
 				<div class="property-carousel">
 					{{ photo_carousel }}
 					<div>
-						<img data-lazy="{{ transform path width="900" height="600" src="{{ value }}"}}">
+						<img data-lazy="{{ transform path width="900" height="600" quality="70" src="{{ value }}"}}">
 					</div>
 					{{ /photo_carousel}}
 				</div>
