--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -119,12 +119,16 @@
 		
 	}
 	.preview-image {
-		height: 100%;
-		width: 100%;
+		display: block;
+		width: 100vw;
+		height: 100vh;
+		object-fit: cover;
+		// height: 100%;
+		// width: 100%;
 		transition: all 300ms ease-in-out;
-		position: absolute;
+		// position: absolute;
 		background-color: $light-gray;
-		background-size: cover;
+		// background-size: cover;
 		text-align: center;
 
 	}
