--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -7969,12 +7969,12 @@ input.radio, select.radio {
     height: 300px; } }
 
 .property_box .preview-image {
-  height: 100%;
-  width: 100%;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   transition: all 300ms ease-in-out;
-  position: absolute;
   background-color: #ECEBEC;
-  background-size: cover;
   text-align: center; }
 
 .property_box.property {
