--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -7970,12 +7970,16 @@ input.radio, select.radio {
 
 .property_box .preview-image {
   display: block;
+  height: 100%;
+  width: 100%;
+  transition: all 300ms ease-in-out;
+  position: absolute;
+  background-color: #ECEBEC;
+  background-size: cover;
+  text-align: center;
   width: 100vw;
   height: 100vh;
-  object-fit: cover;
-  transition: all 300ms ease-in-out;
-  background-color: #ECEBEC;
-  text-align: center; }
+  object-fit: cover; }
 
 .property_box.property {
   padding: 10px; }
