--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -127,9 +127,9 @@
 		background-color: $light-gray;
 		background-size: cover;
 		text-align: center;
-		width: 100vw;
-		height: 100vh;
-		object-fit: cover;
+		// width: 100vw;
+		// height: 100vh;
+		// object-fit: cover;
 	}
 	&.property {
 		padding: 10px;
