--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -7976,10 +7976,7 @@ input.radio, select.radio {
   position: absolute;
   background-color: #ECEBEC;
   background-size: cover;
-  text-align: center;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover; }
+  text-align: center; }
 
 .property_box.property {
   padding: 10px; }
