fixed location issue, added sitemaps, changed neighborhood issues, added schemas, added key feature ordering to property pages, added alt tags to lots of images

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,3 +58,4 @@
 @import 'modules/_featured_post.scss';
 @import 'modules/_social.scss';
 @import 'modules/_no_hero.scss';
+@import 'modules/_sitemap.scss';
