--- a/wwwroot/_themes/main/partials/footer.html
+++ b/wwwroot/_themes/main/partials/footer.html
@@ -2,6 +2,7 @@
 	<div class="container">
 		<div class="footer-group">
 			<a href="{{ _site_url }}/faq">Frequently Asked Questions</a>
+			{{ nav from="/sitemap" }}<a href="{{ url }}">Sitemap</a>{{ /nav }}
 			<div class="show-small">
 				<a href="{{ globals:map_url}}" target="_blank">
 					<div>{{ globals:address_line1 }}</div>
