--- a/wwwroot/_themes/main/templates/agents.html
+++ b/wwwroot/_themes/main/templates/agents.html
@@ -15,7 +15,7 @@
 			{{ if first }}
 			<div class="grid-3-constrained-padding">
 				<div>
-					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
+					<img class="circle" src="{{ path src="{{ image }}" }}" alt="{{ title }} - Leslie J. Garfield &amp; Co"></img>
 					<span class="name">{{ title }}</span>
 				</div>
 				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
