--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -8884,3 +8884,49 @@ section.faq {
 .no-hero {
   margin-top: 0;
   padding-top: 0; }
+
+.sitemap {
+  margin-bottom: 20px; }
+
+.sitemap .sub-section:before, .sitemap .sub-section:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.sitemap h2 {
+  margin-bottom: 20px; }
+
+.sitemap h2 a {
+  font-family: "Copernicus-Medium";
+  font-size: 22px;
+  line-height: 46px; }
+
+.sitemap h3 {
+  line-height: 26px; }
+
+.sitemap li {
+  display: list-item;
+  list-style-type: none;
+  width: 32.20339%;
+  float: left;
+  margin-left: 16px; }
+
+.sitemap li:nth-child(3n + 1) {
+  margin-left: 0;
+  margin-right: -100%;
+  clear: both;
+  margin-left: 0; }
+
+.sitemap li:nth-child(3n + 2) {
+  margin-left: 33.89831%;
+  margin-right: -100%;
+  clear: none; }
+
+.sitemap li:nth-child(3n + 3) {
+  margin-left: 67.79661%;
+  margin-right: -100%;
+  clear: none; }
+
+.sitemap li a {
+  text-decoration: underline;
+  font-size: 12px; }
