--- a/wwwroot/_themes/main/partials/nav.html
+++ b/wwwroot/_themes/main/partials/nav.html
@@ -35,7 +35,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        {{ nav from="/" max_depth="1" exclude="properties|faq|contact|map"}}
+        {{ nav from="/" max_depth="1" exclude="properties|faq|contact|map|sitemap"}}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
@@ -45,7 +45,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        {{ nav from="/" exclude="properties|agents|services|company|neighborhoods|reports|blog|faq|map" }}
+        {{ nav from="/" exclude="properties|agents|services|company|neighborhoods|reports|blog|faq|map|sitemap" }}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="btn-contact current"{{ else }} class="btn-contact"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
