--- a/wwwroot/_themes/main/templates/agent_individual.html
+++ b/wwwroot/_themes/main/templates/agent_individual.html
@@ -1,20 +1,20 @@
 <section class="leading bg-gray agent-individual">
-	<div class="container">
+	<div class="container" itemscope itemtype="https://schema.org/RealEstateAgent">
 
 		<aside class="sticky">					
-			<img class="circle" src="{{ image }}" class="img-circle" />
-			<div class="agent-name">{{ title }}</div>
+			<img itemprop="image" class="circle" src="{{ image }}" class="img-circle" />
+			<div itemprop="name" class="agent-name" >{{ title }}</div>
 			<ul>
-				{{ if phone }}<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
-				<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>
+			{{ if phone }}<li itemprop="phone">{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
+			<li itemprop="email">{{ theme:partial src="svg/mail" }} {{ email|link }}</li>
 			</ul>
 			<div class="dotted"></div>
 		</aside>
 
 		<main>
 			<div class="agent-info">
-				<h2 class="agent-title">{{ title }}</h2>
-				{{ info }}
+				<h2 itemprop="name" class="agent-title">{{ title }}</h2>
+				<div itemprop="description">{{ info }}</div>
 			</div>
 
 			{{ if press|not_empty }}
