--- a/wwwroot/_themes/main/templates/neighborhood.html
+++ b/wwwroot/_themes/main/templates/neighborhood.html
@@ -2,7 +2,7 @@
 <section class="bg-gray">
 	<div class="container">
 		<ul class="grid">	
-			{{ entries:listing folder="neighborhoods/individual_neighborhoods" }}	
+			{{ entries:listing folder="neighborhoods" }}	
 			{{ theme:partial src="neighborhood_tile" use_context="true" }}
 			{{ /entries:listing }}
 		</ul>
