--- a/wwwroot/_themes/main/templates/agents.html
+++ b/wwwroot/_themes/main/templates/agents.html
@@ -24,7 +24,7 @@
 			{{ else }}
 			<div class="grid-3-constrained-padding">
 				<a href="{{ url }}">
-					<img class="circle" src="{{ transform width="200" src="{{ image }}" }}"></img>
+					<img class="circle" src="{{ transform width="200" src="{{ image }}" }}" alt="{{ title }} - Leslie J. Garfield &amp; Co"></img>
 					<span class="name">{{ title }}</span>
 				</a>
 				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
