--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -5902,6 +5902,13 @@ footer .footer-divider {
 .property-info .open-house .o-h-span.display {
   display: inline-block; }
 
+.property-info .open-house .time-slot {
+  display: block; }
+
+@media (min-width: 992px) {
+  .property-info .open-house .time-slot {
+    display: inline-block; } }
+
 .property-info .open-house span {
   bottom: 0;
   font-size: 13px;
@@ -5920,10 +5927,11 @@ footer .footer-divider {
 .property-info .open-house span.oh-divider {
   color: #FF0000;
   display: none;
-  padding: 0 10px; }
+  padding: 0 10px;
+  display: none; }
 
 @media (min-width: 992px) {
-  .property-info .open-house span.oh-divider.display {
+  .property-info .open-house span.oh-divider {
     display: inline-block; } }
 
 .dotted {
