transparent alt text

--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -171,6 +171,7 @@
 		max-height: 246px;
 		text-align: center;
 		margin: auto;
+		color: transparent;
 	}
 	@include breakpoint($small) {
 		img {
