--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -168,14 +168,15 @@
 .property-carousel {
 	width: 100%;
 	img {
-		max-height: 246px;
+		height: 246px;
 		text-align: center;
 		margin: auto;
 		color: transparent;
+		border-width: 0;
 	}
 	@include breakpoint($small) {
 		img {
-			max-height: 600px;
+			height: 600px;
 		}
 	}
 
