redirects and schemas

--- a/wwwroot/_themes/main/partials/nav.html
+++ b/wwwroot/_themes/main/partials/nav.html
@@ -1,4 +1,5 @@
 
+{{ cache }}
 <header class="navbar">
   <div class="container nav-container">
     <div class="navbar-header">
@@ -60,3 +61,4 @@
     </div>
   </div>
 </header>
+{{ cache }}
