--- a/wwwroot/_themes/main/layouts/default.html
+++ b/wwwroot/_themes/main/layouts/default.html
@@ -18,7 +18,7 @@
   {{ elseif segment_2 =="new-york" || segment_2 == "international" }}
   <meta name="description" content="{{ summary_intro|truncate:160|striptags }}">
   {{ elseif segment_1 =="neighborhoods" && segment_2 }}
-  <meta name="description" content="{{ description|truncate:160|striptags }}">
+  <meta name="description" content="Leslie J. Garfield is New York’s leading expert on {{ title }} townhouses and small buildings. Check out our listings and schedule a viewing today!">
   {{ else }}
   <meta name="description" content="Premium NYC townhouse and small building experts who enable clients to make smarter real estate decisions by providing accurate, timely information and insights.">
   {{ endif }}
@@ -30,9 +30,7 @@
   <meta property="og:postal-code" content="10022" />
   <meta property="og:country-name" content="USA" />
 
-  <!-- build:css -->
-  <link rel="stylesheet" href="{{ theme:css }}" />
-  <!-- endbuild -->
+  <link rel="stylesheet" href="{{ theme:css src="main.min.css" }}" />
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
@@ -71,7 +69,13 @@
 
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-spy="scroll" data-target="#scroll-spy-nav">
-
+{{ if segment_1 == "ljg@lesliegarfield.com" }}
+{{ redirect url="{{ homepage }}" }}
+{{ elseif segment_1 == "agent" }}
+{{ redirect url="{{ homepage }}agents" }}
+{{ elseif segment_2 == "viewproperty" }}
+{{ redirect url="{{ homepage }}properties/new-york" }}
+{{ endif }}
     <div class="page-wrap">
       {{ theme:partial src="nav" }}
       {{ layout_content }}
@@ -79,9 +83,7 @@
 
     {{ theme:partial src="footer" }}
 
-  <!-- build:js -->
-  <script src="{{ theme:js }}"></script>
-  <!-- endbuild -->
+  <script src="{{ theme:js src="main.min.js" }}"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
