--- a/wwwroot/_themes/main/templates/landing.html
+++ b/wwwroot/_themes/main/templates/landing.html
@@ -56,6 +56,7 @@
 	</section>
 
 
+{{ cache key="properties-new-york" }}
 
 {{ entries:listing folder="properties/new-york/sale" sort_by="random" show_future="true" conditions="streeteasy_status:!sold" }}
 {{ if no_results }}
@@ -93,6 +94,8 @@
 {{ endif }}
 {{ /entries:listing }}
 
+{{ /cache }}
+
 	<section>
 		<div class="circle-leader">
 			<div class="circle white">
@@ -128,7 +131,7 @@
 		</div>
 	</section>
 
-
+{{ cache key="properties-international" }}
 
 {{ entries:listing folder="properties/international/sale" sort_by="random" show_future="true" conditions="streeteasy_status:!sold"}}
 {{ if no_results }}
@@ -165,5 +168,7 @@
 
 {{ endif }}
 {{ /entries:listing }}
+
+{{ /cache }}
 
 {{ theme:partial src="modal_valuation" }}
