--- a/wwwroot/_themes/main/templates/property.html
+++ b/wwwroot/_themes/main/templates/property.html
@@ -18,11 +18,11 @@
 
 		<main>
 		
-			<div class="property-info">
+			<div itemscope itemtype="https://schema.org/Place" class="property-info">
 
 				<div class="property-top-bar">
-					<div class="location-granular"><span>
-						{{ property_location }}</span>
+					<div itemprop="areaServed" class="location-granular">
+						<span>{{ property_location }}</span>
 						{{ if location_granular|not_empty }}
 						<span class="divider"></span>
 						<span>{{ location_granular }}</span>
@@ -33,8 +33,9 @@
 					</div>
 				</div>
 
-				<div class="property-header">
-					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
+				<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress" class="property-header">
+					<h2 itemprop="streetAddress">
+					{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
 				</div>
 
 				<div class="open-house desktop">
@@ -44,7 +45,7 @@
 				<div class="property-carousel">
 					{{ photo_carousel }}
 					<div>
-						<img src="{{ transform path width="900" height="600" quality="70" src="{{ value }}"}}" alt="{{ title }} - {{ property_location }} - New York City Townhouse Real Estate">
+						<img itemprop="streetAddress" src="{{ transform path width="900" height="600" quality="70" src="{{ value }}"}}" alt="{{ title }} - {{ property_location }} - New York City Townhouse Real Estate">
 					</div>
 					{{ /photo_carousel}}
 				</div>
