--- a/wwwroot/_themes/main/templates/agent_individual.html
+++ b/wwwroot/_themes/main/templates/agent_individual.html
@@ -16,28 +16,41 @@
 				<h2 itemprop="name" class="agent-title">{{ title }}</h2>
 				<div itemprop="">{{ info }}</div>
 			</div>
-
-			{{ if press|not_empty }}
+			
+			{{ if press |not_empty }}
+			{{ press }}
+			{{ if publication && press|length <= 1 }}
 			<div class="green-specs">
 				<h3>PRESS</h3>
 				<div class="press">
-					{{ if press|length <= 1 }}
 					<div class="carousel_tile carousel_tile_1 main_tile">
-						{{ press }}
-							{{ theme:partial src="press_item" use_context="true" }}
-						{{ /press }}
+						{{ theme:partial src="press_item" use_context="true" }}
 					</div>
-					{{ else }}
-					<div class="carousel_tile carousel_tile_2 main_tile">
-					{{ press }}
-							{{ theme:partial src="press_item" use_context="true" }}
-						{{ /press }}
-					</div>
-					{{ endif }}
 				</div>
 			</div>
+			{{ elseif publication && press|length > 1 }}
+			{{ if first }}
+			<div class="green-specs">
+				<h3>PRESS</h3>
+				<div class="press">
+					<div class="carousel_tile carousel_tile_2 main_tile">
+				{{ endif }}
+					{{ theme:partial src="press_item" use_context="true" }}
+				{{ if last }}
+				</div>
+				</div>
+				</div>
+				{{ endif }}
+
 			{{ else }}
 			{{ endif }}
+			{{ /press }}
+			{{ else }}
+			{{ endif }}
+
+
+
+
 
 			{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental|properties/international/sale|properties/international/rental" conditions="agents:{url}, streeteasy_status:!sold" show_future="true" sort_by="price" sort_dir="desc" }}
 			{{ if no_results }}
