--- a/wwwroot/_themes/main/partials/property_tile_agent.html
+++ b/wwwroot/_themes/main/partials/property_tile_agent.html
@@ -12,7 +12,7 @@
 <div>
 	<a href="{{ url }}" class="property_box slick">
 		<div class="image-wrap">
-			<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'>
+			<img nopin= "nopin" class='preview-image' data-lazy="{{ path src='{{ preview_image }}' }}" );>
 			</div>
 		</div>
 		<div class="property_tile_info">
