updated margin on agents property page

--- a/wwwroot/_themes/main/partials/property/agent.html
+++ b/wwwroot/_themes/main/partials/property/agent.html
@@ -15,11 +15,11 @@
 {{ /relate:agents }}
 {{ else }}
 <div itemscope itemtype="https://schema.org/RealEstateAgent" class="agent-block">
-	<a class="agent-image" href="http://beauchampestates.com" target="_blank" >
+	<a class="agent-image" href="http://beauchampestates.com" target="_blank" rel="noopener noreferrer" >
 		<img nopin= "nopin" itemprop="image" src="../../../_themes/main/img/beauchamp.jpg" class="img-circle" />
 	</a>
 	<div class="agent-details">
-		<a href="http://beauchampestates.com" target="_blank"><span itemprop="name">Beauchamp Estates</span></a>
+		<a href="http://beauchampestates.com" target="_blank" rel="noopener noreferrer"><span itemprop="name">Beauchamp Estates</span></a>
 		<ul>
 			<li itemprop="phone">{{ theme:partial src="svg/phone" }} +44 (0) 20 7499 7722</li>
 			<li itemprop="email">{{ theme:partial src="svg/mail" }}<a href="mailto:info@beauchamp.co.uk">info@beauchamp.co.uk</a></li>
